[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "password-analyzer"
version = "1.0.0"
description = "Анализ надежности паролей с проверкой утечек и рекомендациями"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Иван"}
]

dependencies = [
    "requests>=2.25"
]

[project.urls]
Homepage = "https://github.com/yourname/password-analyzer"
Repository = "https://github.com/yourname/password-analyzer"
Issues = "https://github.com/yourname/password-analyzer/issues"