[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Password Analyzer"
version = "1.0.0"
description = "Password analyzer library"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "iviqn" }
]
dependencies = [
    "requests"
]
